# ITK

./: .clang-format  .git-blame-ignore-revs  .pre-commit-config.yaml  files_with_oneline.list  itk_common.cmake  pyproject.toml
Examples/Installation/: CMakeLists.txt
Modules/Core/FiniteDifference/src/: CMakeLists.txt  itkDenseFiniteDifferenceImageFilterExplicit.cxx  itkFiniteDifferenceFunctionExplicit.cxx  itkFiniteDifferenceImageFilterExplicit.cxx
Modules/Core/ImageAdaptors/src/: CMakeLists.txt  itkComplexConjugateImageAdaptorExplicit.cxx  itkNthElementImageAdaptorExplicit.cxx  itkNthElementPixelAccessorExplicit.cxx  itkRGBToLuminanceImageAdaptorExplicit.cxx  itkVectorImageToImageAdaptorExplicit.cxx
Modules/Core/ImageFunction/src/: CMakeLists.txt  itkBSplineDecompositionImageFilterExplicit.cxx  itkBSplineInterpolateImageFunctionExplicit.cxx  itkBSplineResampleImageFunctionExplicit.cxx  itkBinaryThresholdImageFunctionExplicit.cxx  itkCentralDifferenceImageFunctionExplicit.cxx  itkCovarianceImageFunctionExplicit.cxx  itkGaussianBlurImageFunctionExplicit.cxx  itkGaussianDerivativeImageFunctionExplicit.cxx  itkImageFunctionExplicit.cxx  itkLinearInterpolateImageFunctionExplicit.cxx  itkMahalanobisDistanceThresholdImageFunctionExplicit.cxx  itkMeanImageFunctionExplicit.cxx  itkNearestNeighborExtrapolateImageFunctionExplicit.cxx  itkNearestNeighborInterpolateImageFunctionExplicit.cxx  itkNeighborhoodBinaryThresholdImageFunctionExplicit.cxx  itkNeighborhoodOperatorImageFunctionExplicit.cxx  itkRayCastInterpolateImageFunctionExplicit.cxx  itkSumOfSquaresImageFunctionExplicit.cxx  itkVectorLinearInterpolateImageFunctionExplicit.cxx  itkVectorMeanImageFunctionExplicit.cxx  itkWindowedSincInterpolateImageFunctionExplicit.cxx
Modules/Core/Mesh/src/: CMakeLists.txt  itkAutomaticTopologyMeshSourceExplicit.cxx  itkConnectedRegionsMeshFilterExplicit.cxx  itkImageToMeshFilterExplicit.cxx  itkMeshExplicit.cxx  itkMeshSourceExplicit.cxx  itkMeshToMeshFilterExplicit.cxx  itkRegularSphereMeshSourceExplicit.cxx  itkSimplexMeshExplicit.cxx  itkSimplexMeshGeometry.cxx  itkSimplexMeshToTriangleMeshFilterExplicit.cxx  itkSimplexMeshVolumeCalculatorExplicit.cxx  itkSphereMeshSourceExplicit.cxx  itkTriangleMeshToBinaryImageFilterExplicit.cxx  itkTriangleMeshToSimplexMeshFilterExplicit.cxx  itkVTKPolyDataWriterExplicit.cxx
Modules/Core/QuadEdgeMesh/src/: CMakeLists.txt  itkGeometricalQuadEdgeExplicit.cxx  itkQuadEdgeMeshBoundaryEdgesMeshFunctionExplicit.cxx  itkQuadEdgeMeshEulerOperatorJoinFacetFunctionExplicit.cxx  itkQuadEdgeMeshEulerOperatorJoinVertexFunctionExplicit.cxx  itkQuadEdgeMeshEulerOperatorSplitFacetFunctionExplicit.cxx  itkQuadEdgeMeshEulerOperatorSplitVertexFunctionExplicit.cxx  itkQuadEdgeMeshExplicit.cxx  itkQuadEdgeMeshFunctionBaseExplicit.cxx  itkQuadEdgeMeshPointExplicit.cxx  itkQuadEdgeMeshScalarDataVTKPolyDataWriterExplicit.cxx  itkQuadEdgeMeshToQuadEdgeMeshFilterExplicit.cxx  itkQuadEdgeMeshTopologyCheckerExplicit.cxx  itkQuadEdgeMeshZipMeshFunctionExplicit.cxx
Modules/Core/SpatialObjects/src/: CMakeLists.txt  itkAffineGeometryFrameExplicit.cxx  itkArrowSpatialObjectExplicit.cxx  itkBlobSpatialObjectExplicit.cxx  itkBoxSpatialObjectExplicit.cxx  itkContourSpatialObjectExplicit.cxx  itkContourSpatialObjectPointExplicit.cxx  itkDTITubeSpatialObjectExplicit.cxx  itkDTITubeSpatialObjectPointExplicit.cxx  itkEllipseSpatialObjectExplicit.cxx  itkGaussianSpatialObjectExplicit.cxx  itkGroupSpatialObjectExplicit.cxx  itkImageMaskSpatialObjectExplicit.cxx  itkImageSpatialObjectExplicit.cxx  itkLandmarkSpatialObjectExplicit.cxx  itkLineSpatialObjectExplicit.cxx  itkLineSpatialObjectPointExplicit.cxx  itkMeshSpatialObjectExplicit.cxx  itkMetaArrowConverterExplicit.cxx  itkMetaBlobConverterExplicit.cxx  itkMetaContourConverterExplicit.cxx  itkMetaConverterBaseExplicit.cxx  itkMetaDTITubeConverterExplicit.cxx  itkMetaEllipseConverterExplicit.cxx  itkMetaGaussianConverterExplicit.cxx  itkMetaGroupConverterExplicit.cxx  itkMetaImageConverterExplicit.cxx  itkMetaImageMaskConverterExplicit.cxx  itkMetaLandmarkConverterExplicit.cxx  itkMetaLineConverterExplicit.cxx  itkMetaMeshConverterExplicit.cxx  itkMetaSurfaceConverterExplicit.cxx  itkMetaTubeConverterExplicit.cxx  itkMetaVesselTubeConverterExplicit.cxx  itkPointBasedSpatialObjectExplicit.cxx  itkPolygonGroupSpatialObjectExplicit.cxx  itkPolygonSpatialObjectExplicit.cxx  itkSceneSpatialObjectExplicit.cxx  itkSpatialObjectPointExplicit.cxx  itkSpatialObjectPropertyExplicit.cxx  (+10 more)
Modules/Core/TestKernel/src/: CMakeLists.txt  itkPipelineMonitorImageFilterExplicit.cxx  itkRandomImageSourceExplicit.cxx  itkTestDriver.cxx  itkTestDriverInclude.cxx
Modules/Core/Transform/src/: CMakeLists.txt  itkAffineTransformExplicit.cxx  itkAzimuthElevationToCartesianTransformExplicit.cxx  itkBSplineBaseTransformExplicit.cxx  itkBSplineDeformableTransformExplicit.cxx  itkBSplineTransformExplicit.cxx  itkBSplineTransformInitializerExplicit.cxx  itkCenteredAffineTransformExplicit.cxx  itkCenteredEuler3DTransformExplicit.cxx  itkCenteredRigid2DTransformExplicit.cxx  itkCenteredSimilarity2DTransformExplicit.cxx  itkCompositeTransformExplicit.cxx  itkElasticBodyReciprocalSplineKernelTransformExplicit.cxx  itkElasticBodySplineKernelTransformExplicit.cxx  itkEuler2DTransformExplicit.cxx  itkEuler3DTransformExplicit.cxx  itkFixedCenterOfRotationAffineTransformExplicit.cxx  itkIdentityTransformExplicit.cxx  itkKernelTransformExplicit.cxx  itkMatrixOffsetTransformBaseExplicit.cxx  itkMultiTransformExplicit.cxx  itkQuaternionRigidTransformExplicit.cxx  itkRigid2DTransformExplicit.cxx  itkRigid3DPerspectiveTransformExplicit.cxx  itkRigid3DTransformExplicit.cxx  itkScalableAffineTransformExplicit.cxx  itkScaleLogarithmicTransformExplicit.cxx  (+12 more)
Wrapping/Generators/: CMakeLists.txt
Wrapping/Generators/CastXML/: CMakeLists.txt
Wrapping/Generators/Doc/: CMakeLists.txt  doxygen.config.in
Wrapping/Generators/Explicit/: Explicit.cxx.in
Wrapping/Generators/Python/: CMakeLists.txt  itkExtras.py
Wrapping/Generators/SwigInterface/: CMakeLists.txt  igenerator.py
(+4411 files in other folders)
